fix problem details schema mismatch
